--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,23 +4,42 @@ header {
   justify-content: space-between;
   align-items: center;
 
+  width: 100%;
   height: 100px;
+  position: fixed;
+  z-index: 999;
+  background-color: #fff;
 }
 .header__logo_size {
   width: 220px;
 }
-menu {
+.header__menu {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 
-  list-style: none;
   width: 500px;
 }
 .header__contact {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  justify-content: center;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: #333;
+  color: #fff;
+}
+.footer__menu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
 }
