--- a/src/components/App.css
+++ b/src/components/App.css
@@ -28,6 +28,11 @@ header {
   justify-content: center;
 }
 
+
+main {
+  padding-top: 100px;
+}
+
 footer {
   display: flex;
   flex-direction: row;
