--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,6 +9,7 @@ header {
   position: fixed;
   z-index: 999;
   background-color: #fff;
+  padding: 0 35px;
 }
 .header__logo_size {
   width: 220px;
@@ -43,6 +44,61 @@ footer {
   color: #fff;
 }
 .footer__menu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+
+/* Pages */
+.app__title {
+  text-align: center;
+  font-size: 38px;
+}
+.app__title::after {
+  content: "";
+  display: block;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80px;
+  height: 4px;
+  background-color: #54cd7d;
+}
+
+.about__text {
+  margin-top: 50px;
+  width: 70%;
+  text-align: justify;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.products__wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.contacts__wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+
+}
+.contacts__form {
+  width: 50vw;
+  padding: 25px 35px;
+}
+.contacts__info {
+  width: 50vw;
+  padding: 25px 35px;
+}
+.contacts__info__items {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
