--- a/src/components/App.css
+++ b/src/components/App.css
@@ -28,10 +28,32 @@ header {
   align-items: flex-end;
   justify-content: center;
 }
+.footer__contact {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+}
+.footer__contact a, .footer__menu a {
+  color: #fff;
+  text-decoration: none;
+}
+.footer__contact a:hover, .footer__menu a:hover {
+  color: #f2f2f2;
+  text-decoration: underline #fff;
+}
+
+.header__menu a, .header__contact a {
+  color: #000;
+  text-decoration: none;
+}
 
 
 main {
   padding-top: 100px;
+}
+.section {
+  padding: 25px;
 }
 
 footer {
@@ -55,6 +77,7 @@ footer {
 .app__title {
   text-align: center;
   font-size: 38px;
+  margin-bottom: 25px;
 }
 .app__title::after {
   content: "";
