--- a/src/components/App.css
+++ b/src/components/App.css
@@ -65,6 +65,8 @@ footer {
   background-color: #333;
   color: #fff;
   padding: 50px 35px;
+  border-top: 1px solid #fff;
+  position: relative;
 }
 .footer__menu {
   display: flex;
@@ -74,58 +76,9 @@ footer {
   width: 500px;
 }
 
-
-/* Pages */
-.app__title {
-  text-align: center;
-  font-size: 38px;
-  margin-bottom: 25px;
-}
-.app__title::after {
-  content: "";
-  display: block;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80px;
-  height: 4px;
-  background-color: #54cd7d;
-}
-
-.about__text {
-  margin-top: 50px;
-  width: 70%;
-  text-align: justify;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.products__wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.contacts__wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-
-}
-.contacts__form {
-  width: 50vw;
-  padding: 25px 35px;
-}
-.contacts__info {
-  width: 50vw;
-  padding: 25px 35px;
-}
-.contacts__info__items {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
+.author {
+  position: absolute;
+  bottom: 5px;
+  right: 35px;
+  color: #f2f2f2;
 }
