--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,7 +8,7 @@ header {
   height: 100px;
   position: fixed;
   z-index: 999;
-  background-color: #fff;
+  background-color: #f2f2f2;
   padding: 0 35px;
 }
 .header__logo_size {
