--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,12 @@ menu {
 .num {
   font-family: 'Roboto', sans-serif;
 }
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
