--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -10,3 +10,7 @@
 .carousel-inner__caption h5 {
   font-size: 35px;
 }
+
+.fade-in {
+	animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
