--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -1,5 +1,9 @@
 .about {
   background-color: #f2f2f2;
+  opacity: 0;
+}
+.products {
+  opacity: 0;
 }
 
 .contacts {
@@ -62,4 +66,12 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+}
+.contacts__info__item {
+  color: #fff;
+  text-decoration: none;
+}
+.contacts__info__item:hover {
+  color: #fff;
+  text-decoration: underline;
 }
